# WorldCupPredictor

./: .gitignore  CLAUDE.md  Makefile  README.md  annex_c_r32.csv  annex_c_r32.json  plan.md  pyproject.toml  validate_annex_c.py
.github/workflows/: ci.yml  dashboard.yml  smoketest.yml
configs/: goal_model.json  ratings.json
data/reference/: README.md  aliases.json  elo_prior_2026.json  goal_model_2026.json  groups.json  ko_bracket_2026.json
docs/: app.js  index.html  style.css
docs/data/: latest.json
docs/data/history/: 20260614151826.json  20260614155334.json  20260614155627.json  20260614172143.json  20260614172532.json  20260614184523.json  20260614185922.json  20260614200300.json  20260614221304.json  20260615042727.json  20260615054518.json  20260615131900.json  20260615180635.json  20260615211944.json  20260615231434.json  20260616014709.json  20260616071423.json  20260616122313.json  20260616172823.json  20260616202349.json  (+417 more)
src/wcpredictor/: README.md  __init__.py
tests/: README.md  _ratings_util.py  conftest.py  test_annex_c.py  test_blend.py  test_bracket.py  test_bracket_live.py  test_bracket_payload.py  test_calibrate.py  test_dixon_coles.py  test_elo.py  test_espn.py  test_etp.py  test_explain.py  test_host_edge.py  test_knockout.py  test_lambdas.py  test_model.py  test_openfootball.py  test_point_in_time.py  test_prior.py  test_ratings_point_in_time.py  test_reconcile.py  test_report.py  test_shrinkage.py  test_sim_live_state.py  test_standings.py  test_teams.py  test_upcoming.py
tests/golden/: espn_20260613.json  espn_20260614.json
(+32 files in other folders)
